# SignifyAI

./: .gitignore  README.md  app_plan.md  db_plan.md  sprint_plan.md  supabase_schema.sql
apps/api/: pyproject.toml
apps/api/app/: __main__.py  main.py
apps/api/app/routes/: health.py  inference.py
apps/api/tests/: test_health.py
apps/web/: .eslintrc.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/web/src/: env.d.ts  main.tsx
apps/web/src/components/dashboard/: lesson-card.tsx  metric-card.tsx
apps/web/src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  input.tsx  theme-toggle.tsx
apps/web/src/layouts/: app-shell.tsx  dashboard-layout.tsx
apps/web/src/lib/: query-client.ts  supabase.ts
apps/web/src/lib/queries/: chat.ts  dashboard.ts  lessons.ts  practice.ts
apps/web/src/pages/: ask.tsx  auth.tsx  dashboard.tsx  landing.tsx  search.tsx
apps/web/src/pages/practice/: advanced.tsx  basics.tsx  freestyle.tsx  layout.tsx
apps/web/src/routes/: protected-route.tsx  router.tsx
apps/web/src/state/: auth-provider.tsx  theme-provider.tsx
apps/web/src/styles/: global.css
supabase/: config.toml
supabase/functions/reset-streak/: index.ts
